crates/snforge-scarb-plugin/tests/integration/single_attributes/snapshots/integration__single_attributes__fork__accepts_inline_config.snap
---
source: tests/integration/single_attributes/fork.rs
expression: format_output(&result)
---
fn empty_fn() {
    if snforge_std::_internals::is_config_run() {
        let mut data = array![];
        snforge_std::_internals::config_types::ForkConfig::Inline(
            snforge_std::_internals::config_types::InlineForkConfig {
                url: "http://example.com/",
                block: snforge_std::_internals::config_types::BlockId::BlockNumber(0x17),
            },
        )
            .serialize(ref data);
        starknet::testing::cheatcode::<'set_config_fork'>(data.span());
        return Default::default();
    };
}
