crates/snforge-scarb-plugin/tests/integration/single_attributes/snapshots/integration__single_attributes__fork__accepts_string.snap
---
source: tests/integration/single_attributes/fork.rs
expression: format_output(&result)
---
fn empty_fn() {
    if snforge_std::_internals::is_config_run() {
        let mut data = array![];
        snforge_std::_internals::config_types::ForkConfig::Named("test").serialize(ref data);
        starknet::testing::cheatcode::<'set_config_fork'>(data.span());
        return Default::default();
    };
}
